fix css overflow issue with button link

--- a/src/styles/application/pages/_devResources.scss
+++ b/src/styles/application/pages/_devResources.scss
@@ -30,4 +30,8 @@
     line-height: 24px;
     text-align: left;
   }
+
+  &-content {
+    overflow: auto;
+  }
 }
